--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -10,7 +10,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/info"
+        android:id="@+id/infoList"
         />
     <Button
         android:layout_width="match_parent"
