hide and show password feature add

--- a/app/src/main/res/layout/activity_info_enter.xml
+++ b/app/src/main/res/layout/activity_info_enter.xml
@@ -15,6 +15,7 @@
         />
     <EditText
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:id="@+id/usernameEnter"
         android:inputType="text"/>
@@ -27,9 +28,12 @@
         />
     <EditText
         android:layout_width="match_parent"
+        android:paddingRight="10dp"
         android:layout_height="wrap_content"
         android:id="@+id/passwordEnter"
         android:inputType="textPassword"
+
+        android:drawableRight="@drawable/close"
         />
     <TextView
         android:layout_width="match_parent"
