--- a/app/src/main/res/layout/activity_info_enter.xml
+++ b/app/src/main/res/layout/activity_info_enter.xml
@@ -15,7 +15,6 @@
         />
     <EditText
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:id="@+id/usernameEnter"
         android:inputType="text"/>
@@ -66,12 +65,25 @@
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="15sp"
         />
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/enterSecurity"
-        android:id="@+id/phoneEnter"
-        android:inputType="text"/>
+        android:layout_height="wrap_content">
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/phoneCode"
+            android:entries="@array/numberCode"
+            android:spinnerMode="dropdown"
+            android:textAlignment="center"
+            />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/enterSecurity"
+            android:id="@+id/phoneEnter"
+            android:inputType="number"
+            android:layout_weight="1"/>
+    </LinearLayout>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
