--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -5,58 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Register">
+    tools:context=".FindPassword">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/username"
-        android:textSize="15dp"
-        android:textColor="@android:color/holo_green_dark"
-        />
+        android:textSize="15sp"
+        android:textColor="@android:color/holo_orange_dark"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/usernameReg"
+        android:id="@+id/findUsername"
         android:hint="@string/enterUsername"
         android:inputType="text"/>
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/password"
-        android:textSize="15dp"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@android:color/holo_orange_dark"
+
+        android:textSize="15sp"
         />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/passwordReg"
-        android:hint="@string/enterPassword"
-        android:inputType="textPassword"
+        android:id="@+id/passwordFind"
         android:drawableRight="@drawable/close"
         android:paddingRight="10dp"
-        />
+        android:hint="@string/enterPassword"
+        android:inputType="textPassword"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="1">
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/back"
-            android:id="@+id/backBtn"
+            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:text="@string/checkBtn"
+            android:id="@+id/checkBtn"
             />
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/register"
-            android:id="@+id/registerBtn"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-
-            />
+            android:text="@string/changeBtn"
+            android:id="@+id/changeBtn"/>
     </LinearLayout>
-
 </LinearLayout>
