--- a/app/src/main/res/layout/activity_edit_info.xml
+++ b/app/src/main/res/layout/activity_edit_info.xml
@@ -15,11 +15,14 @@
     <ListView
         android:id="@+id/infoList2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:transcriptMode="alwaysScroll"
+        android:layout_weight="8"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/BtnBackToFront2"
         android:text="@string/BackToFront"
+
         />
 </LinearLayout>
