--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/password"
+        android:id="@+id/passHint"
         android:textColor="@android:color/holo_orange_dark"
 
         android:textSize="15sp"
@@ -35,22 +36,17 @@
         android:paddingRight="10dp"
         android:hint="@string/enterPassword"
         android:inputType="textPassword"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
         <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+
             android:text="@string/checkBtn"
             android:id="@+id/checkBtn"
             />
         <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:text="@string/changeBtn"
             android:id="@+id/changeBtn"/>
-    </LinearLayout>
 </LinearLayout>
