--- a/app/src/main/res/layout/activity_info_enter.xml
+++ b/app/src/main/res/layout/activity_info_enter.xml
@@ -64,6 +64,7 @@
         android:text="@string/securityPhone"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="15sp"
+        android:id="@+id/secInfo"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,6 +85,12 @@
             android:inputType="number"
             android:layout_weight="1"/>
     </LinearLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:id="@+id/otherInfoEnter"
+        android:hint="@string/otherInfoHint"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
