--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/aboutUs" android:title="@string/aboutUs"/>
+    <item android:id="@+id/backupRestore" android:title="@string/backupBtn"/>
+    <item android:id="@+id/restore" android:title="@string/restoreBtn"/>
 </menu>
