Add search Method

--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -31,7 +31,12 @@
         android:id="@+id/checkInfo"
         android:text="@string/checkInfo"
         android:textColor="@android:color/holo_red_dark"/>
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/goSearch"
+        android:text="@string/searchBtn"
+        android:textColor="@android:color/holo_blue_dark"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
