--- a/app/src/main/res/layout/activity_restore.xml
+++ b/app/src/main/res/layout/activity_restore.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/restoreHint"
         android:textColor="@android:color/holo_red_dark"
+        android:id="@+id/restoreHint"
         android:textSize="25sp"/>
     <Button
         android:layout_width="match_parent"
