--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -36,6 +36,13 @@
         android:paddingRight="10dp"
         android:hint="@string/enterPassword"
         android:inputType="textPassword"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/passwordHint"
+        android:textColor="@android:color/holo_orange_dark"
+        android:id="@+id/passwordHint2"
+        />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
