--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,13 @@
         android:drawableRight="@drawable/close"
         android:paddingRight="10dp"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/passwordHint"
+        android:textColor="@android:color/holo_orange_dark"
+        android:id="@+id/passwordHint"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
