--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:id="@+id/password"
         android:hint="@string/enterPassword"
         android:inputType="textPassword"
+        android:maxLength="16"
         android:drawableRight="@drawable/close"
         android:paddingRight="10dp"
         />
