--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/passwordReg"
+        android:maxLength="16"
         android:hint="@string/enterPassword"
         android:inputType="textPassword"
         android:drawableRight="@drawable/close"
