add remember password feature, fix bugs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,12 @@
         android:drawableRight="@drawable/close"
         android:paddingRight="10dp"
         />
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/rememberPassword"
+        android:id="@+id/remember"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
