Add phoneNumber,OtherInfo switch to control if you need input that. Add warning when you push back in edit method.

--- a/app/src/main/res/layout/activity_get_in_edit.xml
+++ b/app/src/main/res/layout/activity_get_in_edit.xml
@@ -13,11 +13,12 @@
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="15sp"
         />
+
     <EditText
+        android:id="@+id/usernameEnter2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/usernameEnter2"
-        android:inputType="text"/>
+        android:inputType="text" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,6 +59,26 @@
         android:id="@+id/webEnter2"
         android:inputType="text"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/phoneSW2"
+            android:text="@string/phoneSW"
+            android:layout_weight="1"
+            android:checked="false"
+            />
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/otherSW2"
+            android:text="@string/otherSW"
+            android:checked="false"
+            android:layout_weight="1"/>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,6 +86,7 @@
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="15sp"
         android:id="@+id/secInfo2"
+        android:visibility="gone"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -76,6 +98,7 @@
             android:entries="@array/numberCode"
             android:spinnerMode="dropdown"
             android:textAlignment="center"
+            android:visibility="gone"
             />
         <EditText
             android:layout_width="wrap_content"
@@ -83,14 +106,16 @@
             android:hint="@string/enterSecurity"
             android:id="@+id/phoneEnter2"
             android:inputType="number"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:visibility="gone"/>
     </LinearLayout>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:id="@+id/otherInfoEnter2"
-        android:hint="@string/otherInfoHint"/>
+        android:hint="@string/otherInfoHint"
+        android:visibility="gone"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
