--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -42,4 +42,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/backToMain"
         android:text="@string/returnToLogin"/>
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/dbProgress"
+        android:layout_gravity="center"
+        />
 </LinearLayout>
